# governance-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  plan.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml
config/: example.toml
observability/: README.md  docker-compose.yml
observability/grafana/dashboards/: gov-agent-observability.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/otel-collector/: config.yaml
observability/prometheus/: alerts.yml  prometheus.yml
observability/tempo/: tempo.yaml
prompts/: default_prompt.md  semantic_scoring_rubric.md
src/: agent.rs  app.rs  chain.rs  cli.rs  config.rs  decision.rs  decoder.rs  ipfs.rs  lib.rs  llm.rs  main.rs  notifier.rs  observability.rs  review.rs  rpc.rs  signer.rs  storage.rs  types.rs
testdata/bundles/: README.md
testdata/bundles/malicious_uniswapv2/: index.html  manifest.json  package.json  vibefi.json
testdata/bundles/malicious_uniswapv2/abis/: ERC20.json  UniswapV2Factory.json  UniswapV2Pair.json  UniswapV2Router02.json
testdata/bundles/malicious_uniswapv2/src/: App.tsx  abis.ts  addresses.ts  app.css  env.ts  main.tsx  utils.ts  wagmi.ts
testdata/bundles/malicious_uniswapv2/src/components/: Button.tsx  Card.tsx  Field.tsx  Toast.tsx
testdata/bundles/malicious_uniswapv2/src/hooks/: useAllowance.ts  useErc20Balance.ts  useEthBalance.ts  useQuote.ts  useTokenMeta.ts
testdata/bundles/red_team_vapp/: README.md  index.html  manifest.json  package.json  vibefi.json
testdata/bundles/red_team_vapp/src/: index.js
