[package]
name = "governance-agent"
version = "0.1.0"
edition = "2024"
description = "LLM-assisted VibeFi governance voting agent"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
alloy = { version = "1.7.3", features = ["full", "signer-keystore"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
